--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -7,3 +7,11 @@
     display: flex;
     box-sizing: border-box;
 }
+.right-page{
+    display: flex;
+    flex-direction: column;
+    flex: 1; //自适应剩余空间
+    padding-left: 20px;
+    padding-right: 10px;
+    height: 100%;
+}
