--- a/main/src/pages/components/TaskList/components/TaskItem/index.less
+++ b/main/src/pages/components/TaskList/components/TaskItem/index.less
@@ -1,7 +1,8 @@
-.task-item{
-    height: 100px;
+.task-item {
+    height: 115px;
     padding: 6px 0px;
-    display: flex;
+    // display: flex;
+    // flex-direction: column;
     position: relative;
     align-items: flex-start;
     border-radius: 8px;
@@ -9,116 +10,194 @@
     margin: 2px 5px 20px 5px;
     box-shadow: 5px 5px 10px #cfcfcf;
     transition: all 0.2s;
+
     &:hover {
         box-shadow: 5px 5px 15px 2px #b8b8b8;
     }
-    &_info{
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        left:10px;
-        padding-left: 10px;
-        width: 900px;
-        &:hover{
-             background-color: rgb(245, 246, 248);
-         }
+
+    // &_desc {
+    //     color: #4b4b4b
+    // }
+}
+
+.task-item_info {
+    position: absolute;
+    left: 10px;
+    padding-left: 10px;
+    left: 10px;
+    right: 10px;
+    width: 900px;
+    height: 70px;
+
+    &:hover {
+        background-color: rgb(245, 246, 248);
     }
-    &_title{
+}
+
+.task-item_title {
         font-size: 20px;
         margin-bottom: 8px;
     }
-    &_desc{
-        color:#4b4b4b
-    }
-    &_status{
+
+//status
+.task-item {
+    &_status {
+        top: 8px;
         display: flex;
         flex-direction: column;
         position: absolute;
         right: 20px;
     }
-    &_tags{
-        display: flex;
-        font-size: 20px;
-        margin-bottom: 8px;
-        width: auto;
-        height: auto;
-        align-self: flex-start;
-        font-size: 15px;
-        text-align: center;
-        justify-content: center;
-        font-weight: 550;
-        margin-top: 10px;
-        margin-bottom: 18px;
-        border-radius: 2%;
-        margin-top: 15px;
-    }
-    &_timeout{
-        display: flex;
-        font-size: 20px;
-        padding: 3px 12px;
-        width: auto;
-        height: 25px;
-        align-self: flex-start;
-        font-size: 15px;
-        text-align: center;
-        justify-content: center;
-        background-color: #f50;
-        color:white;
-        font-weight: 550;
-        border-radius:2%;
-        margin-left: 10px;
-        &_over{
-            background-color: rgb(140, 139, 138);
-        }
-    }
-    &_ddl{
-        display: flex;
-        font-size: 20px;
-        padding: 3px 12px;
-        // margin-bottom: 8px;
-        width: auto;
-        height: 25px;
-        align-self: flex-start;
-        font-size: 15px;
-        text-align: center;
-        justify-content: center;
-        background-color: rgb(200, 220, 250);
-        color: #9569fd;
-        font-weight: 550;
-        // margin-top: 10px;
-        // margin-bottom: 18px;
-        border-radius: 2%;
-        // margin-top: 15px;
-    }
-    &_finish-btn{
+
+    &_finish-btn {
         display: flex;
         text-align: center;
         justify-content: center;
         background-color: rgb(20, 102, 255);
         border: 0;
         height: 30px;
-        width: 200px;
+        width: 150px;
         font-size: 17px;
         color: white;
-        border-radius: 2%;
-        margin-top: 15px;
+        border-radius: 5%;
         cursor: pointer;
         align-self: flex-start;
     }
-    &_delete-btn{
+
+    &_delete-btn {
         display: flex;
         text-align: center;
         justify-content: center;
         background-color: rgb(177, 217, 245);
         border: 0;
         height: 30px;
-        width: 200px;
+        width: 150px;
         font-size: 17px;
         color: rgb(47, 96, 228);
-        border-radius: 2%;
-        margin-bottom: 15px;
+        border-radius: 5%;
+        margin-bottom: 10px;
         margin-top: 10px;
         cursor: pointer;
         align-self: flex-start;
+    }
+}
+
+.divide{
+    height: 1px;
+    width: 98%;
+    background-color: #a4a0a0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 78px;
+}
+
+.task-item_tags {
+    position: absolute;
+    display: flex;
+    font-size: 20px;
+    bottom: 7px;
+    width: auto;
+    height: auto;
+    align-self: flex-start;
+    font-size: 15px;
+    text-align: center;
+    justify-content: center;
+    font-weight: 550;
+    margin-top: 10px;
+    margin-left: 15px;
+    // margin-bottom: 10px;
+    border-radius: 2%;
+    margin-top: 15px;
+}
+
+.task-item-start {
+    display: flex;
+    margin-right: 8px;
+
+    &_text {
+        font-size: large;
+        font-weight: 500;
+        color: #a4a0a0;
+        margin-right: 5px;
+    }
+
+    &_time {
+        display: flex;
+        font-size: 20px;
+        padding: 3px 12px;
+        width: auto;
+        height: 22px;
+        align-self: flex-start;
+        font-size: 15px;
+        text-align: center;
+        justify-content: center;
+        background-color: rgb(238, 245, 255);
+        color: #9569fd;
+        font-weight: 550;
+        border-radius: 4%;
+    }
+
+}
+
+.task-item-ddl {
+    display: flex;
+    margin-right: 8px;
+
+    &_text {
+        font-size: large;
+        font-weight: 500;
+        color: #a4a0a0;
+        margin-right: 5px;
+    }
+
+    &_time {
+        display: flex;
+        font-size: 20px;
+        padding: 3px 12px;
+        width: auto;
+        height: 22px;
+        align-self: flex-start;
+        font-size: 15px;
+        text-align: center;
+        justify-content: center;
+        background-color: rgb(238, 245, 255);
+        color: #9569fd;
+        font-weight: 550;
+        border-radius: 4%;
+    }
+
+}
+
+.task-item-timeout {
+    display: flex;
+    margin-right: 8px;
+
+    &_text {
+        font-size: large;
+        font-weight: 500;
+        color: #a4a0a0;
+        margin-right: 5px;
+    }
+
+    &_time {
+        display: flex;
+        font-size: 20px;
+        padding: 0 12px;
+        padding-top: 3px;
+        padding-bottom: 4px;
+        width: auto;
+        height: 22px;
+        align-self: flex-start;
+        font-size: 15px;
+        text-align: center;
+        justify-content: center;
+        background-color: rgb(252, 65, 28);
+        color: white;
+        font-weight: 550;
+        border-radius: 5%;
+
+        &_over {
+            background-color: rgb(140, 139, 138);
+        }
     }
 }
