--- a/main/src/pages/components/TaskStatistics/index.less
+++ b/main/src/pages/components/TaskStatistics/index.less
@@ -18,9 +18,8 @@
     transition: 0.2s;
     &:hover{
         cursor: pointer;
-        width: 40px;
+        transform: scale(1.3);   // 视觉放大
     }
-
 }
 
 .unVisible{
