--- a/main/src/pages/components/TaskList/components/TaskToolBar/index.less
+++ b/main/src/pages/components/TaskList/components/TaskToolBar/index.less
@@ -1,36 +1,47 @@
-.task-tool-bar{
+.task-tool-bar {
     width: 100%;
-    background-color: rgb(220, 226, 253);
+    // background-color: rgb(220, 226, 253);
     height: 48px;
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
-    box-shadow: 5px 5px 10px #cfcfcf;
+    // box-shadow: 5px 5px 10px #cfcfcf;
     display: flex;
+
+    &_items {
+        width: auto;
+        display: flex;
+        margin-right: 35px;
+        margin-left: auto;
+        align-items: center;
+        justify-content: center;
+    }
 }
-.task-sort{
+
+.task-sort {
     width: auto;
     display: flex;
     flex-direction: column;
-    margin-right: 35px;
-    margin-left: auto;
+    // margin-right: 35px;
+    margin-left: 15px;
     align-items: center;
     justify-content: center;
     position: relative;
     cursor: pointer;
 }
 
-.sort-icon{
+.sort-icon {
     display: flex;
     width: 30px;
     transition: 0.2s;
-    &:hover{
+
+    &:hover {
         cursor: pointer;
-        width: 40px;
+        transform: scale(1.3); // 视觉放大
     }
 }
 
-.sort-div{
+.sort-div {
     z-index: 1000;
     width: 120px;
     position: absolute;
@@ -43,10 +54,12 @@
     // padding: 5px 8px;
     border-radius: 5%;
     box-shadow: 5px 5px 15px 2px #b8b8b8;
-    &_startTime{
+
+    &_startTime {
         margin-bottom: 5px;
     }
-    &_endTime{
+
+    &_endTime {
         margin-top: 5px;
     }
 }
