--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: HarmonyOS;
+    src: url('../assets/fonts/HarmonyOS_Sans_SC_Regular.ttf');
+}
+*{
+    font-family: HarmonyOS;
+}
+
 .page{
     height: 97vh;
     overflow: hidden;
