搜索输入框调整

--- a/main/src/pages/components/TaskList/components/TaskToolBar/index.less
+++ b/main/src/pages/components/TaskList/components/TaskToolBar/index.less
@@ -18,6 +18,17 @@
     }
 }
 
+.task-search-input .ant-select-selector {
+  font-size: 15px;             // 字体大小
+}
+.task-search-input .ant-select-selection-placeholder {
+  font-size: 15px;             // placeholder 字体
+}
+.task-search-input .ant-select-selection-item {
+  font-size: 15px;             // 已选值字体
+}
+
+
 .task-sort {
     width: auto;
     display: flex;
