--- a/main/src/pages/components/TaskCalendar/index.less
+++ b/main/src/pages/components/TaskCalendar/index.less
@@ -76,3 +76,30 @@
     background-color: #dea2a2;
     border-color: antiquewhite;
 }
+
+.fc .fc-daygrid-day.fc-day-today {
+    background-color: var(--color);
+}
+// .fc .fc-button-primary:disabled {
+//     background-color: var(--color);
+//     border: 0;
+//     margin-top: 10px;
+//     // border-color: var(--fc-button-border-color);
+//     color: var(--fc-button-text-color);
+//     font-weight: 700;
+//     cursor: pointer;
+//     &:hover{
+//         background-color: var(--active);
+//     }
+// }
+// .fc .fc-button-primary {
+//     background-color: var(--color);
+//     border: 0;
+//     margin-top: 10px;
+//     // border-color: var(--fc-button-border-color);
+//     color: var(--fc-button-text-color);
+//     font-weight: 700;
+//     &:hover{
+//         background-color: var(--active);
+//     }
+// }
