--- a/main/src/pages/components/TaskList/components/TaskCreater/index.less
+++ b/main/src/pages/components/TaskList/components/TaskCreater/index.less
@@ -1,15 +1,14 @@
 .add-task-btn {
     box-shadow: 3px 3px 1px #e0e0e0;
-    border-radius: 5px;
+    border-radius: var(--radius);
     padding-top: 15px;
     padding-bottom: 15px;
     margin-bottom: 25px;
     align-items: center;
-    /* 水平方向居中所有子元素 */
-    // box-shadow: 0 0 1px 1px #b6b5b5;
+    background-color: white;
     transition: all 0.2s;
     &:hover {
-        box-shadow: 0 0 2px 2px #b8b8b8;
+        box-shadow: 0 0 1px 1px #b8b8b8;
     }
 
     &_inner {
