--- a/main/src/pages/scrollbar.less
+++ b/main/src/pages/scrollbar.less
@@ -12,7 +12,7 @@
 
 /* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
-  background: rgb(0, 0, 0); /* 滑块背景色 */
+  background: #333; /* 滑块背景色 */
   border-radius: 4px;  /* 滑块圆角 */
 }
 
