--- a/main/src/pages/components/MainMenu/index.less
+++ b/main/src/pages/components/MainMenu/index.less
@@ -4,13 +4,10 @@
     display: flex;
     flex-direction: column;
     padding: 13px;
-    margin-top: 90px;
-    padding-top: 30px;
-    margin-bottom: 70px;
-    background-color: rgb(220, 226, 253);
-    box-sizing: border-box; /* 确保内边距包含在宽度内 */
-    border-radius: 5%;
-    box-shadow: 5px 5px 8px #b7b7b7;
+    padding-top: 120px;
+    border-right: 6px solid #d6d4d4;
+    background-color:#fcfbfb;
+    box-sizing: border-box; 
     margin-right: 5px;
     .menu-item{
         margin-bottom: 12px;
