--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -1,3 +1,9 @@
+:root{
+--color:red;
+--active:#006699;
+--radius:6;
+}
+
 @font-face {
     font-family: HarmonyOS;
     src: url('../assets/fonts/HarmonyOS_Sans_SC_Regular.ttf');
@@ -10,6 +16,7 @@
     height: 97vh;
     overflow: hidden;
     border: 0;
+    background-color: #f6f6f6;;
 }
 .container{
     display: flex;
