logo+完成列表下拉框内容修改+去除electron默认菜单+修改标题和图标+打包+基础样式修改

--- a/main/src/pages/components/MainMenu/index.less
+++ b/main/src/pages/components/MainMenu/index.less
@@ -4,11 +4,24 @@
     display: flex;
     flex-direction: column;
     padding: 13px;
-    padding-top: 120px;
+    // padding-top: 120px;
     border-right: 6px solid #d6d4d4;
     background-color:#fcfbfb;
     box-sizing: border-box; 
     margin-right: 5px;
+    align-items: center;
+    .logo-div{
+        height: 120px;
+        width: 120px;
+    }
+        h3{
+            padding: 0;
+            margin: 0;
+            color: #1196db;
+            padding-bottom: 30px;
+            padding-top: 10px;
+        }
+
     .menu-item{
         margin-bottom: 12px;
     }
