最小化到托盘+打包后调整样式+设置窗口的大小

--- a/main/src/pages/components/TaskList/components/TaskItem/index.less
+++ b/main/src/pages/components/TaskList/components/TaskItem/index.less
@@ -28,6 +28,7 @@
     &:hover {
         background-color: rgb(245, 246, 248);
         border-radius: var(--radius);
+        width: 75%;
         height: 50%;
     }
 }
