--- a/main/src/pages/components/TaskCalendar/index.less
+++ b/main/src/pages/components/TaskCalendar/index.less
@@ -1,6 +1,6 @@
 .task-calendar {
     flex: 1;
-    padding-left: 20px;
+    // padding-left: 20px;
     padding-right: 10px;
     height: 80%;
     overflow: auto;
