--- a/main/src/pages/components/TaskList/index.less
+++ b/main/src/pages/components/TaskList/index.less
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     flex: 1; //自适应剩余空间
-    padding-left: 20px;
+    // padding-left: 20px;
     padding-right: 10px;
     height: 80%;
 }
@@ -13,5 +13,6 @@
     // padding-top: 15px;
     box-sizing: border-box;
     overflow: auto;
+    overflow-x: hidden;
 }
 
